--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,77 @@
+html,
+body,
+#root {
+	width: 100vw;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	/* font-size: 2vh; */
+}
+
+header,
+main,
+footer {
+	width: 100%;
+	margin: 0;
+	border: 0;
+	box-sizing: border-box;
+}
+header {
+	height: 10vh;
+	margin-bottom: 1vh;
+	/* font-size: 1.2em; */
+}
+main {
+	height: 80vh;
+	margin-bottom: 1vh;
+	/* font-size: 1em; */
+}
+footer {
+	height: 8vh;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	/* font-size: 1em; */
+}
+/*
+div,
+button,
+p,
+span,
+input,
+a {
+	font-size: 1em;
+}
+h6 {
+	font-size: 1.25em;
+}
+h5 {
+	font-size: 1.5em;
+}
+h4 {
+	font-size: 1.75em;
+}
+h3 {
+	font-size: 2em;
+}
+h2 {
+	font-size: 2.25em;
+}
+h1 {
+	font-size: 2.5em;
+} */
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
